--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,20 +12,36 @@
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="40dp"
             android:id="@+id/container"
             android:textSize="20sp"
             android:layout_gravity="center"
             android:text="This is a CameraX test app!"
             android:gravity="center">
         </TextView>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            tools:srcCompat="@tools:sample/avatars" />
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/textview"
+        android:textSize="15sp"
+        android:layout_gravity="center"
+        android:text="Labels:"
+        android:gravity="center">
+    </TextView>
 
         <Button
             android:id="@+id/enableCamera"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             android:gravity="center"
             android:text="Open Camera" />
+
+
     </LinearLayout>
 
 
