--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,8 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity2"
-    >
+    tools:context=".MainActivity2">
 
     <RelativeLayout
         android:id="@+id/parent"
@@ -20,9 +19,4 @@
 
         </androidx.camera.view.PreviewView>
     </RelativeLayout>
-
-
-
-
-
 </layout>
